syntax = "proto3";

package gitaly;

option go_package = "gitlab.com/gitlab-org/gitaly/proto/go/gitalypb";

import "shared.proto";

service NamespaceService {
  rpc AddNamespace(AddNamespaceRequest) returns (AddNamespaceResponse) {
    option (op_type) = {
      op: MUTATOR
      scope_level: SERVER,
    };
  }
  rpc RemoveNamespace(RemoveNamespaceRequest) returns (RemoveNamespaceResponse) {
    option (op_type) = {
      op: MUTATOR
      scope_level: SERVER,
    };
  }
  rpc RenameNamespace(RenameNamespaceRequest) returns (RenameNamespaceResponse) {
    option (op_type) = {
      op: MUTATOR
      scope_level: SERVER,
    };
  }
  rpc NamespaceExists(NamespaceExistsRequest) returns (NamespaceExistsResponse) {
    option (op_type).op = ACCESSOR;
  }
}

message AddNamespaceRequest {
  string storage_name = 1;
  string name = 2;
}

message RemoveNamespaceRequest {
  string storage_name = 1;
  string name = 2;
}

message RenameNamespaceRequest {
  string storage_name = 1;
  string from = 2;
  string to = 3;
}

message NamespaceExistsRequest {
  string storage_name = 1;
  string name = 2;
}

message NamespaceExistsResponse {
  bool exists = 1;
}

message AddNamespaceResponse {}
message RemoveNamespaceResponse {}
message RenameNamespaceResponse {}
